# orinfar

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  rust-toolchain.toml  test  test.rs
docs/: MANUAL.md
src/: action.rs  buffer.rs  buffer_char.rs  buffer_line.rs  buffer_update.rs  c.rs  cli.rs  commands.rs  count.rs  file_io.rs  global_state.rs  highlight.rs  highlight_c.rs  initialization.rs  io.rs  language.rs  logging.rs  main.rs  markdown.rs  meta_command.rs  mode.rs  motion.rs  operator.rs  panic_hook.rs  parser.rs  program_init.rs  program_initialization.rs  program_loop.rs  quickfix.rs  register.rs  render.rs  shell_commands.rs  status_bar.rs  tests.rs  text_object.rs  text_objects.rs  tutorial.rs  undo.rs  utility.rs  view.rs  (+2 more)
