[package]

name = "orinfar"
version = "0.0.5"
edition = "2024"
description = "A Text Editor For Witches"
license = "MIT"
readme = "README.md"
repository = "https://github.com/azaleacolburn/orinfar"
authors = ["Azalea Colburn azaleacolburn@gmail.com"]
keywords = ["vi", "vim", "minimal"]
categories = ["text-editor"]

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.42", features = ["derive"] }
crossterm = "0.29.0"
ropey = "1.6.1"
tree-sitter = "0.26.3"
tree-sitter-c = "0.24.1"
xdg = "3.0.0"

[lints.clippy]
suspicious    = { level = "deny", priority = -1 }
complexity    = { level = "deny", priority = -1 }
perf          = { level = "deny", priority = -1 }
style         = { level = "deny", priority = -1 }
pedantic      = { level = "deny", priority = -1 }
nursery       = { level = "deny", priority = -1 }
cargo         = { level = "deny", priority = -1 }
unwrap_used   = "deny"

[profile.release]
lto = "fat"
